--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <version>4.1.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-support</artifactId>
+            <version>4.0.0-rc-1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
